regression/fail/free-type-variable.sml
datatype t = T of 'a
